Phase 2: 코드 품질 개선